added random positioning of main photo

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
             <li><a href="design.html">Art & Design</a></li>
         </nav>
         <div class="content">
-            <img width="800px"
+            <img id="main-photo" width="800px"
             src="static/images/img1.jpg"
             />
         </div>
     </div>
+    <script src="./js/randomPosition.js"></script>
 </html>
