--- a/notes.html
+++ b/notes.html
@@ -16,6 +16,7 @@
         <div class="content">
             <h1> Notes </h1>
             <li><a href="/notes/welcome-to-my-blog.html">Welcome to My Blog!</a></li>
+            <li><a href="/notes/turmeric-chia-focaccia.html">Turmeric Chia Focaccia Recipe</a></li>
         </div>
     </div>
 </html>
