added imageCarousel script and new images

--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
             <li><a href="design.html">Art & Design</a></li>
         </nav>
         <div class="content">
-            <img id="main-photo" width="800px"
-            src="static/images/img1.jpg"
-            />
+            <div id="main-photo">
+                <img width="800px" name="main-photo"
+                src="./static/images/1.png" alt="Alameda Creek Trail at sunset - Fremont, CA"
+                />
+                <div id="photo-caption"></div>
+            </div>
         </div>
     </div>
     <script src="./js/randomPosition.js"></script>
+    <script src="./js/imageCarousel.js"></script>
 </html>
