--- a/notes.html
+++ b/notes.html
@@ -17,6 +17,7 @@
             <h1> Notes </h1>
             <li><a href="/notes/welcome-to-my-blog.html">Welcome to My Blog!</a></li>
             <li><a href="/notes/turmeric-chia-focaccia.html">Turmeric Chia Focaccia Recipe</a></li>
+            <li><a href="/notes/virtue.html">Virtue</a></li>
         </div>
     </div>
 </html>
