salted liquorice post

--- a/notes.html
+++ b/notes.html
@@ -18,6 +18,7 @@
             <li><a href="/notes/welcome-to-my-blog.html">Welcome to My Blog!</a></li>
             <li><a href="/notes/turmeric-chia-focaccia.html">Turmeric Chia Focaccia Recipe</a></li>
             <li><a href="/notes/virtue.html">Virtue</a></li>
+            <li><a href="/notes/salted-liquorice.html">Salted Liquorice</a></li>
         </div>
     </div>
 </html>
