adjust main photo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="content">
             <div id="main-photo">
                 <img width="800px" name="main-photo"
-                src="./static/images/1.png" alt="Alameda Creek Trail at sunset - Fremont, CA"
+                src="" alt=""
                 />
                 <div id="photo-caption"></div>
             </div>
