edit salted liquorice post

--- a/notes/salted-liquorice.html
+++ b/notes/salted-liquorice.html
@@ -30,7 +30,7 @@
             <p class="c2"><span class="c1">The next day, I decided to give the soft salmiak another try. I tasted the same flavors as before, but this time, with a more relaxed and focused mind, I noticed how the saltiness actually complemented the bittersweetness. The result is quite savory &ndash; similar to a teriyaki, but more salty and less sweet. </span></p>
             <p class="c2 c6"><span class="c1"></span></p>
             <p class="c2 c6"><span class="c1"></span></p>
-            <p class="c2"><span class="c1">If dark chocolate is the rodeo master, then salted liquorice is the frenzied bulls. You don&rsquo;t really know what&rsquo;s up with it, but if you are mellow and smooth and go with the flow, you come out alright in the end. Well, that&rsquo;s my journey with liquorice. If you want to give salted liquorice a try, hey, I commend you for your open-mindedness and gusto. Hope you enjoy it as I have. Cheers! </span></p>
+            <p class="c2"><span class="c1">If dark chocolate is the rodeo master, then salted liquorice is the frenzied bulls. You don&rsquo;t really know what&rsquo;s up with it, but if you are mellow and smooth and go with the flow, you come out alright in the end. Well, metaphor attempt aside, that&rsquo;s my journey with liquorice. If you want to give salted liquorice a try, hey, I commend you for your open-mindedness and gusto. Hope you enjoy it as I have. Cheers! </span></p>
             <p class="c2"><span>&nbsp;</span></p>
             <p class="c2"><span class="c3">&nbsp; </span></p>
         </div>
