add images 14-16 and create art-design page with first design post

--- a/art-design.html
+++ b/art-design.html
@@ -2,7 +2,6 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="./css/styles.css">
-        <link rel="stylesheet" href="./css/index.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Jeff K. Wang </title>
@@ -15,14 +14,8 @@
             <li><a href="art-design.html">Art & Design</a></li>
         </nav>
         <div class="content">
-            <div id="main-photo">
-                <img width="800px" name="main-photo"
-                src="" alt=""
-                />
-                <div id="photo-caption"></div>
-            </div>
+            <h1> Art & Design </h1>
+            <li><a href="/art-design/design1.pdf">12-19-2023-Design-1</a></li>
         </div>
     </div>
-    <script src="./js/randomPosition.js"></script>
-    <script src="./js/imageCarousel.js"></script>
 </html>
