add pizza delivery guy post

--- a/notes.html
+++ b/notes.html
@@ -20,6 +20,7 @@
             <li><a href="/notes/virtue.html">Virtue</a></li>
             <li><a href="/notes/salted-liquorice.html">Salted Liquorice</a></li>
             <li><a href="/notes/i-reynaldo-moon.html">I, Reynaldo Moon</a></li>
+            <li><a href="/notes/pizza-delivery-guy.html">Pizza Delivery Guy (Re)</a></li>
         </div>
     </div>
 </html>
