--- a/stories.html
+++ b/stories.html
@@ -11,7 +11,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="notes.html">Notes</a></li>
             <li><a href="stories.html">Stories</a></li>
-            <li><a href="design.html">Art & Design</a></li>
+            <li><a href="art-design.html">Art & Design</a></li>
         </nav>
         <div class="content">
             <h1> Stories </h1>
