--- a/notes.html
+++ b/notes.html
@@ -21,6 +21,7 @@
             <li><a href="/notes/salted-liquorice.html">Salted Liquorice</a></li>
             <li><a href="/notes/i-reynaldo-moon.html">I, Reynaldo Moon</a></li>
             <li><a href="/notes/pizza-delivery-guy.html">Pizza Delivery Guy (Re)</a></li>
+            <li><a href="/notes/happy-hour.html">Happy Hour</a></li>
         </div>
     </div>
 </html>
