add pauper in new shoes note

--- a/notes.html
+++ b/notes.html
@@ -22,6 +22,7 @@
             <li><a href="/notes/i-reynaldo-moon.html">I, Reynaldo Moon</a></li>
             <li><a href="/notes/pizza-delivery-guy.html">Pizza Delivery Guy (Re)</a></li>
             <li><a href="/notes/happy-hour.html">Happy Hour</a></li>
+            <li><a href="/notes/pauper-in-new-shoes.html">Pauper in New Shoes (Story Concept)</a></li>
         </div>
     </div>
 </html>
