--- a/notes.html
+++ b/notes.html
@@ -23,6 +23,7 @@
             <li><a href="/notes/pizza-delivery-guy.html">Pizza Delivery Guy (Re)</a></li>
             <li><a href="/notes/happy-hour.html">Happy Hour</a></li>
             <li><a href="/notes/pauper-in-new-shoes.html">Pauper in New Shoes (Story Concept)</a></li>
+            <li><a href="/notes/02-01-2024.html">This Morning</a></li>
         </div>
     </div>
 </html>
