--- a/art-design.html
+++ b/art-design.html
@@ -16,6 +16,7 @@
         <div class="content">
             <h1> Art & Design </h1>
             <li><a href="/art-design/design1.pdf">12-19-2023-Design-1</a></li>
+            <li><a href="/art-design/Day01/index.html">P5.js -- EPILEPSY</a></li>
         </div>
     </div>
 </html>
