--- a/art-design.html
+++ b/art-design.html
@@ -17,6 +17,7 @@
             <h1> Art & Design </h1>
             <li><a href="/art-design/design1.pdf">12-19-2023-Design-1</a></li>
             <li><a href="/art-design/Day01/index.html">P5.js -- EPILEPSY</a></li>
+            <li><a href="/art-design/Day02/index.html">P5.js -- Port Dreamcity to Code</a></li>
         </div>
     </div>
 </html>
